Lombock refactoring and Resttemplate as bean