@@ -6,74 +6,74 @@ import java.util.List;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.http.HttpEntity;
-import org.springframework.http.HttpHeaders;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
-import org.springframework.http.ResponseEntity;
+import org.springframework.http.*;
 import org.springframework.stereotype.Service;
-import org.springframework.web.client.RestTemplate;
 import org.springframework.web.client.HttpClientErrorException;
+import org.springframework.web.client.RestTemplate;
 
 @Service
 public class EurekaClientService {
 
     private static final Logger log = LoggerFactory.getLogger(EurekaClientService.class);
 
-    private final RestTemplate restTemplate = new RestTemplate();
+    private final RestTemplate restTemplate;
 
     @Value("${EUREKA_SERVER_URL:http://localhost:8761/eureka/apps/}")
-    private String eurekaServerUrl;
+    String eurekaServerUrl;
+
+    public EurekaClientService(RestTemplate restTemplate) {
+        this.restTemplate = restTemplate;
+    }
 
     private String getEurekaHost() {
         try {
-            URI uri = new URI(eurekaServerUrl);
-            return uri.getHost();
+            return new URI(eurekaServerUrl).getHost();
         } catch (Exception e) {
+            log.warn("Could not parse Eureka URL '{}': {}", eurekaServerUrl, e.getMessage());
             return eurekaServerUrl;
         }
     }
 
     public String generateInstanceId(ServiceInstance instance) {
         int port = instance.isSslPreferred() ? instance.getSecurePort() : instance.getHttpPort();
-        return String.format("%s:%s:%d", instance.getHostName(), instance.getServiceName(), port);
+        return "%s:%s:%d".formatted(instance.getHostName(), instance.getServiceName(), port);
     }
 
     public String generateServiceName(ServiceInstance instance) {
-        if (instance.getServiceName() == null) {
-            log.warn("ServiceName is null, using UNKNOWN (EurekaHost={})", getEurekaHost());
+        String name = instance.getServiceName();
+        if (name == null || name.isBlank()) {
+            log.warn("ServiceName is null or blank, using UNKNOWN (EurekaHost={})", getEurekaHost());
             return "UNKNOWN";
         }
-        return instance.getServiceName().trim().toUpperCase();
+        return name.trim().toUpperCase();
     }
 
     public boolean registerInstance(ServiceInstance instance) {
         String serviceName = generateServiceName(instance);
         String appUrl = eurekaServerUrl + serviceName;
 
-        String xmlPayload = buildXmlPayload(instance);
-
         HttpHeaders headers = new HttpHeaders();
         headers.setContentType(MediaType.APPLICATION_XML);
         headers.setAccept(List.of(MediaType.APPLICATION_XML));
 
-        HttpEntity<String> request = new HttpEntity<>(xmlPayload, headers);
+        HttpEntity<String> request = new HttpEntity<>(buildXmlPayload(instance), headers);
 
         try {
             ResponseEntity<String> response = restTemplate.postForEntity(appUrl, request, String.class);
+
             if (response.getStatusCode() == HttpStatus.NO_CONTENT) {
-                log.info("Successfully registered instance {} at {} (EurekaHost={})",
-                        instance.getServiceName(), appUrl, getEurekaHost());
+                log.info("Registered instance {} at {} (EurekaHost={})",
+                        serviceName, appUrl, getEurekaHost());
                 return true;
-            } else {
-                log.error("Failed to register instance {}. Status: {} (EurekaHost={})",
-                        instance.getServiceName(), response.getStatusCode(), getEurekaHost());
-                log.error(response.getBody());
-                return false;
             }
+
+            log.error("Failed to register instance {}. Status: {} Body: {} (EurekaHost={})",
+                    serviceName, response.getStatusCode(), response.getBody(), getEurekaHost());
+            return false;
+
         } catch (Exception e) {
             log.error("Error registering instance {} at {} (EurekaHost={}): {}",
-                    instance.getServiceName(), appUrl, getEurekaHost(), e.getMessage(), e);
+                    serviceName, appUrl, getEurekaHost(), e.getMessage(), e);
             return false;
         }
     }
@@ -81,11 +81,11 @@ public class EurekaClientService {
     public void deregisterInstance(ServiceInstance instance) {
         String serviceName = generateServiceName(instance);
         String instanceId = generateInstanceId(instance);
-        String deregisterUrl = eurekaServerUrl + serviceName + "/" + instanceId;
+        String url = eurekaServerUrl + serviceName + "/" + instanceId;
 
         try {
-            restTemplate.delete(deregisterUrl);
-            log.info("Successfully deregistered instance {} ({}) (EurekaHost={})",
+            restTemplate.delete(url);
+            log.info("Deregistered instance {} ({}) (EurekaHost={})",
                     serviceName, instanceId, getEurekaHost());
         } catch (Exception e) {
             log.error("Error deregistering instance {} ({}) (EurekaHost={}): {}",
@@ -96,36 +96,34 @@ public class EurekaClientService {
     public boolean sendHeartbeat(ServiceInstance instance) {
         String serviceName = generateServiceName(instance);
         String instanceId = generateInstanceId(instance);
-        String heartbeatUrl = eurekaServerUrl + serviceName + "/" + instanceId;
+        String url = eurekaServerUrl + serviceName + "/" + instanceId;
 
         try {
-            restTemplate.put(heartbeatUrl, null);
-            log.info("[Heartbeat] Erfolgreich für {} ({}) (EurekaHost={})",
+            restTemplate.put(url, null);
+            log.info("[Heartbeat] OK for {} ({}) (EurekaHost={})",
                     serviceName, instanceId, getEurekaHost());
             return true;
+
         } catch (HttpClientErrorException.NotFound nf) {
-            log.error("[Heartbeat] Instance {} ({}) not found in Eureka (EurekaHost={})",
+            log.error("[Heartbeat] Instance {} ({}) not found (EurekaHost={})",
                     serviceName, instanceId, getEurekaHost(), nf);
             throw nf;
+
         } catch (Exception e) {
-            log.error("[Heartbeat] Fehler für {} ({}): {} (EurekaHost={})",
+            log.error("[Heartbeat] Error for {} ({}): {} (EurekaHost={})",
                     serviceName, instanceId, e.getMessage(), getEurekaHost(), e);
             return false;
         }
     }
 
-    private String buildXmlPayload(ServiceInstance instance) {
+    String buildXmlPayload(ServiceInstance instance) {
         boolean ssl = instance.isSslPreferred();
-
-        String portEnabled = ssl ? "false" : "true";
-        String secureEnabled = ssl ? "true" : "false";
-
         String protocol = ssl ? "https" : "http";
         int port = ssl ? instance.getSecurePort() : instance.getHttpPort();
 
         return """
                 <instance>
-                  <instanceId>%s:%s:%d</instanceId>
+                  <instanceId>%s</instanceId>
                   <hostName>%s</hostName>
                   <app>%s</app>
                   <ipAddr>%s</ipAddr>
@@ -142,13 +140,17 @@ public class EurekaClientService {
                   </dataCenterInfo>
                 </instance>
                 """.formatted(
-                instance.getHostName(), instance.getServiceName(), port,
-                instance.getHostName(), instance.getServiceName(),
+                generateInstanceId(instance),
+                instance.getHostName(),
+                instance.getServiceName(),
                 instance.getIpAddr(),
-                instance.getServiceName().toLowerCase(), instance.getServiceName().toLowerCase(),
+                instance.getServiceName().toLowerCase(),
+                instance.getServiceName().toLowerCase(),
                 instance.getStatus(),
-                portEnabled, instance.getHttpPort(),
-                secureEnabled, instance.getSecurePort(),
+                ssl ? "false" : "true",
+                instance.getHttpPort(),
+                ssl ? "true" : "false",
+                instance.getSecurePort(),
                 protocol, instance.getHostName(), port,
                 protocol, instance.getHostName(), port,
                 protocol, instance.getHostName(), port,
